# coati

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  brand.html
.github/workflows/: ci.yml
crates/coati-cli/: Cargo.toml
crates/coati-cli/src/: cmd_ask.rs  cmd_explain.rs  cmd_hw.rs  cmd_model.rs  cmd_propose.rs  cmd_serve.rs  cmd_setup.rs  cmd_voice.rs  ipc.rs  main.rs
crates/coati-cli/tests/: ask.rs  explain.rs  propose.rs  serve.rs  serve_stream.rs  voice_setup.rs
crates/coati-core/: Cargo.toml
crates/coati-core/src/: agent.rs  agent_ext.rs  config.rs  history.rs  ipc.rs  lib.rs  llm.rs  system.rs  tool.rs
crates/coati-desktop/: Cargo.toml  tauri.conf.json
crates/coati-desktop/src/: commands.rs  lib.rs  main.rs  ollama.rs  proposal.rs  shortcut.rs  stream.rs  tray.rs  voice.rs
crates/coati-hw/: Cargo.toml
crates/coati-hw/src/: benchmark.rs  detect.rs  lib.rs  recommend.rs
crates/coati-mcp-server/: Cargo.toml  README.md
crates/coati-mcp-server/src/: main.rs  registry.rs  server.rs
crates/coati-tools/: Cargo.toml
crates/coati-tools/src/: exec.rs  explain_error.rs  lib.rs  list_dir.rs  query_logs.rs  read_file.rs
crates/coati-voice/: Cargo.toml
crates/coati-voice/src/: capture.rs  lib.rs  model.rs  transcribe.rs
crates/coati-voice/tests/: integration_transcribe.rs
plans/: 2026-04-17-phase-1-agent-backend.md  2026-04-18-phase-2-shell-integration.md  2026-04-18-phase-3-desktop-tray.md  2026-04-18-phase-4-voice-ptt.md
scripts/: install-desktop.sh
shell/: README.md  install.sh
shell/bash/: coati.bash
shell/fish/: coati.fish
shell/tests/: bash.bats  mock_coati.sh  run.sh  zsh.bats
shell/zsh/: coati.plugin.zsh
tests/e2e/: README.md  smoke.sh  voice.sh
