[workspace]
resolver = "2"
members = ["crates/coati-core", "crates/coati-tools", "crates/coati-cli", "crates/coati-hw"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/juanpatriciomarchetto/coati"
authors = ["Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "=4.5.45", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rig-core = "0.35"
