[package]
name = "coati-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "coati"
path = "src/main.rs"

[dependencies]
coati-core = { path = "../coati-core" }
coati-tools = { path = "../coati-tools" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "=3.1.0"
