[package]
name = "coati-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "coati"
path = "src/main.rs"

[features]
default = []
voice = ["dep:coati-voice"]

[dependencies]
coati-core = { path = "../coati-core" }
coati-tools = { path = "../coati-tools" }
coati-hw = { path = "../coati-hw" }
coati-voice = { path = "../coati-voice", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
futures = "0.3"
shellexpand = "3"
inquire = "0.7"
hound = "3.5"

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "=3.1.0"
tokio = { version = "1.40", features = ["full"] }
