[package]
name = "coati-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow.workspace = true

[dev-dependencies]
wiremock = "0.5"
tokio = { workspace = true, features = ["macros", "rt", "process"] }
