[package]
name = "coati-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "coati_desktop"
path = "src/lib.rs"

[[bin]]
name = "coati-desktop"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-plugin-global-shortcut"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
coati-core = { path = "../coati-core" }
tauri = { workspace = true, optional = true }
tauri-plugin-global-shortcut = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.5.22"
tempfile = "3.13.0"
