[package]
name = "coati-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server exposing Coati's typed Linux system tools over stdio"

[[bin]]
name = "coati-mcp"
path = "src/main.rs"

[dependencies]
coati-core = { path = "../coati-core" }
coati-tools = { path = "../coati-tools" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
