[package]
name = "coati-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coati-core = { path = "../coati-core" }
async-trait = "0.1"
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time", "macros", "rt"] }

[dev-dependencies]
tempfile = "3.13"
